--- a/test-sonar/build.gradle
+++ b/test-sonar/build.gradle
@@ -16,6 +16,10 @@ repositories {
     jcenter()
 }
 
+plugins {
+  id "org.sonarqube" version "2.6.2"
+}
+
 dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
@@ -27,3 +31,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 }
 
+sonarqube {
+    properties {
+        property "sonar.projectName", "Java :: Simple Project :: SonarQube Scanner for Gradle"
+        property "sonar.projectKey", "org.sonarqube:java-gradle-simple"
+        property "sonar.jacoco.reportPath", "${project.buildDir}/jacoco/test.exec"
+    }
+}
