--- a/test-sonar/build.gradle
+++ b/test-sonar/build.gradle
@@ -5,19 +5,22 @@
  * For more details take a look at the Java Libraries chapter in the Gradle
  * user guide available at https://docs.gradle.org/3.5/userguide/java_library_plugin.html
  */
+plugins {
+  id "org.sonarqube" version "2.6.2"
+}
+
 
 // Apply the java-library plugin to add support for Java Library
 apply plugin: 'java-library' 
+apply plugin: "jacoco"
+apply plugin: 'org.sonarqube'
+
 
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
-}
-
-plugins {
-  id "org.sonarqube" version "2.6.2"
 }
 
 dependencies {
@@ -32,8 +35,11 @@ dependencies {
 }
 
 sonarqube {
-    properties {
-        property "sonar.projectName", "Java :: Simple Project :: SonarQube Scanner for Gradle"
-        property "sonar.projectKey", "org.sonarqube:java-gradle-simple"
-    }
+	properties {
+		property "sonar.projectName", "TEST SONAR Auth Server"
+		property "sonar.jacoco.reportPaths", "${project.buildDir}/jacoco/test.exec"
+		property "sonar.java.source", "1.8"
+		property "sonar.exclusions", "**/intertech/core/*.java"
+		   
+	}
 }
